--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -1,3 +1,16 @@
+:root {
+  --thm-color-0:  #F0F0F0;
+  --thm-color-1:  #E0E0E0;
+  --thm-color-2:  #D0D0D0;
+  --thm-color-3:  #FFF;
+  --thm-color-P:  #2CA600;
+  --thm-color-PL: #36CD00;
+  --thm-color-PD: #218000;
+  --thm-color-S:  #FFA000;
+  --thm-color-SL: #FFD149;
+  --thm-color-SD: #C67100;
+}
+
 *, .dom, .dom * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -183,14 +196,14 @@ hr {
 }
 
 /* main */
-.theme-color-bg-0{background-color: #EEFFFF}
-.theme-color-0{color: #EEFFFF}
-.theme-color-bg-1{background-color: #DDF5F8}
-.theme-color-1{color: #DDF5F8}
-.theme-color-bg-2{background-color: #CCEBF1}
-.theme-color-2{color: #CCEBF1}
-.theme-color-bg-3{background-color: #BBE0EB}
-.theme-color-3{color: #BBE0EB}
+.theme-color-bg-0{background-color: var(--thm-color-0)}
+.theme-color-0{color: var(--thm-color-0)}
+.theme-color-bg-1{background-color: var(--thm-color-1)}
+.theme-color-1{color: var(--thm-color-1)}
+.theme-color-bg-2{background-color: var(--thm-color-2)}
+.theme-color-2{color: var(--thm-color-2)}
+.theme-color-bg-3{background-color: var(--thm-color-3)}
+.theme-color-3{color: var(--thm-color-3)}
 .theme-color-bg-4{background-color: #AAD6E4}
 .theme-color-4{color: #AAD6E4}
 .theme-color-bg-5{background-color: #99ccdd}
@@ -264,32 +277,32 @@ h3 { font-size: 100%; }
 
 /* Background color for Background. */
 .thm-bg0 {
-  background-color: #F0F0F0;
+  background-color: var(--thm-color-0);
+}
+.thm-fg0 {
+  color: var(--thm-color-0);
 }
 html.thm-dark .thm-bg0 {
   background-color: #303030;
 }
 
 /* Background color for App bar. */
-.thm-bg1 {
-  background-color: #E0E0E0;
-}
+.thm-bg1 { background-color: var(--thm-color-1) }
+.thm-fg1 { color: var(--thm-color-1) }
 html.thm-dark .thm-bg1 {
   background-color: #212121;
 }
 
 /* Background color for Status bar. */
-.thm-bg2 {
-  background-color: #D0D0D0;
-}
+.thm-bg2 { background-color: var(--thm-color-2) }
+.thm-fg2 { color: var(--thm-color-2) }
 html.thm-dark .thm-bg2 {
   background-color: #000;
 }
 
 /* Background color for Cards/Dialogs. */
-.thm-bg3 {
-  background-color: #FFF;
-}
+.thm-bg3 { background-color: var(--thm-color-3) }
+.thm-fg3 { color: var(--thm-color-3) }
 html.thm-dark .thm-bg3 {
   background-color: #424242;
 }
@@ -308,32 +321,31 @@ html.thm-dark svg .fill1 { fill: #000 }
 
 /* Primary color. */
 .thm-bgP {
-  background-color: #2CA600;
+  background-color: var(--thm-color-P);
   color: #fff;
 }
 .thm-bgP > div {
   color: #fff;
 }
+.thm-fgP { color: var(--thm-color-P) }
 
 .thm-bgPL {
-  background-color: #36CD00;
+  background-color: var(--thm-color-PL);
   color: #000;
 }
 .thm-bgPL > div {
   color: #000;
 }
+.thm-fgPL { color: var(--thm-color-PL) }
 
 .thm-bgPD {
-  background-color: #218000;
+  background-color: var(--thm-color-PD);
   color: #fff;
 }
 .thm-bgPD > div {
   color: #fff;
 }
-
-.thm-fgP {
-  color: #218000;
-}
+.thm-fgP { color: var(--thm-color-PD) }
 
 .thm-bgP svg .stroke0, .thm-bgPD svg .stroke0
 { stroke: #fff }
@@ -390,28 +402,42 @@ html.thm-dark svg .fill1 { fill: #000 }
 
 /* Secondary */
 .thm-bgS {
-  background-color: #FFA000;
+  background-color: var(--thm-color-S);
   color: #000;
 }
+.thm-fgS { color: var(--thm-color-S) }
 
 .thm-bgSL {
-  background-color: #FFD149;
+  background-color: var(--thm-color-SL);
   color: #000;
 }
+.thm-fgSL { color: var(--thm-color-SL) }
 
 .thm-bgSD {
-  background-color: #C67100;
+  background-color: var(--thm-color-SD);
   color: #fff;
 }
-
-.thm-fgS {
-  color: #C67100;
-}
+.thm-fgSD { color: var(--thm-color-SD) }
 
 .thm-bgSD svg .stroke0 { stroke: #fff }
 .thm-bgSD svg .fill0 { fill: #fff }
 .thm-bgSD svg .stroke1 { stroke: #000 }
 .thm-bgSD svg .fill1 { fill: #000 }
+
+/* SVG fill and stroke */
+.thm-svg-fill-P { fill: var(--thm-color-P) }
+.thm-svg-stroke-P { stroke: var(--thm-color-P) }
+.thm-svg-fill-PL { fill: var(--thm-color-PL) }
+.thm-svg-stroke-PL { stroke: var(--thm-color-PL) }
+.thm-svg-fill-PD { fill: var(--thm-color-PD) }
+.thm-svg-stroke-PD { stroke: var(--thm-color-PD) }
+.thm-svg-fill-S { fill: var(--thm-color-S) }
+.thm-svg-stroke-S { stroke: var(--thm-color-S) }
+.thm-svg-fill-SL { fill: var(--thm-color-SL) }
+.thm-svg-stroke-SL { stroke: var(--thm-color-SL) }
+.thm-svg-fill-SD { fill: var(--thm-color-SD) }
+.thm-svg-stroke-SD { stroke: var(--thm-color-SD) }
+
 
 /* Toolbar size */
 .thm-sz-toolbar {
