--- a/ker/mod/tfw.view.checkbox.css
+++ b/ker/mod/tfw.view.checkbox.css
@@ -14,6 +14,7 @@ button.tfw-view-checkbox {
 
 button.tfw-view-checkbox.wide {
   display: flex;
+  width: 100%;
 }
 
 button.tfw-view-checkbox.wide.hide,
@@ -29,6 +30,9 @@ button.tfw-view-checkbox > div.txt {
   text-overflow: ellipsis;  
   flex-grow: 1;
   text-align: left;
+}
+button.tfw-view-checkbox.inverted > div.txt {
+  order: -1;
 }
 
 button.tfw-view-checkbox > div.pin {
