Logo can be edited now.

--- a/ker/mod/tfw.view.cropped-image.css
+++ b/ker/mod/tfw.view.cropped-image.css
@@ -5,6 +5,7 @@ div.tfw-view-cropped-image {
 }
 
 div.tfw-view-cropped-image > * {
+  display: block;
   margin: 0;
   border: none;
   box-shadow: none;
