--- a/ker/mod/tfw.view.cropped-image.css
+++ b/ker/mod/tfw.view.cropped-image.css
@@ -2,6 +2,10 @@ div.tfw-view-cropped-image {
   padding: 0;
   position: relative;
   display: inline-block;
+  background: #FFF;
+  border-radius: 8px;
+  cursor: pointer;
+  overflow: hidden;
 }
 
 div.tfw-view-cropped-image > * {
@@ -27,4 +31,9 @@ div.tfw-view-cropped-image > img {
 div.tfw-view-cropped-image > img.hide {
   transition: opacity .3s;
   opacity: 0;
+}
+
+
+div.tfw-view-cropped-image > div.tfw-view-file-input {
+  display: none;
 }
