--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -18,7 +18,8 @@ div.tfw-view-textbox > div {
   margin: 0;
 }
 
-div.tfw-view-textbox input {
+div.tfw-view-textbox input,
+div.tfw-view-textbox textarea {
   border: 0;
   margin: 0;
   background: transparent;
@@ -26,7 +27,8 @@ div.tfw-view-textbox input {
   color: rgba(0,0,0,.9);
 }
 
-div.tfw-view-textbox.focus input {
+div.tfw-view-textbox.focus input,
+div.tfw-view-textbox.focus textarea {
   color: #000;
 }
 
