--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -17,8 +17,7 @@ div.tfw-view-textbox > div {
   margin: 0;
 }
 
-div.tfw-view-textbox input,
-div.tfw-view-textbox textarea {
+div.tfw-view-textbox input {
   border: 0;
   margin: 0;
   background: transparent;
@@ -26,17 +25,13 @@ div.tfw-view-textbox textarea {
   color: rgba(0,0,0,.9);
 }
 
-div.tfw-view-textbox.focus input,
-div.tfw-view-textbox.focus textarea {
+div.tfw-view-textbox.focus input {
   color: #000;
-  border: 0;
+  outline: none;
+  border: none;
 }
 
-
-div.tfw-view-textbox.focus input,
-div.tfw-view-textbox.focus textarea,
-div.tfw-view-textbox.focus input:focus,
-div.tfw-view-textbox.focus textarea:focus {
+div.tfw-view-textbox.focus input:focus {
   box-shadow: none;
   outline: none;
 }
