Fix: when content is empty, don't add useless inner space.

--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -37,6 +37,10 @@
   filter: saturate(100%) brightness(120%);
 }
 
+.tfw-view-button > div.text.hide {
+  display: none;
+}
+
 .tfw-view-button > div.text {
   flex-grow: 1;
   order: 1;
