--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -74,10 +74,11 @@
   pointer-event: none;
   text-decoration: none;
   cursor: default;
-  background: rgba(128,128,128,.5);
+  filter: saturate(0);
   text-shadow: none;
   box-shadow: none;
   font-style: italic;
+  opacity: .5;
 }
 
 .tfw-view-button:focus {
