Service tp4.Pack

--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -1,9 +1,9 @@
 :root {
-    --thm-color-0:  #F0F0F0;
+    --thm-color-0:  #CCC;
     --thm-fg-0:  #000;
-    --thm-color-1:  #E0E0E0;
+    --thm-color-1:  #DDD;
     --thm-fg-1:  #000;
-    --thm-color-2:  #D0D0D0;
+    --thm-color-2:  #EEE;
     --thm-fg-2:  #000;
     --thm-color-3:  #FFF;
     --thm-fg-3:  #000;
