--- a/ker/mod/tfw.view.cropped-image.css
+++ b/ker/mod/tfw.view.cropped-image.css
@@ -2,6 +2,7 @@
   padding: 0;
   position: relative;
   display: inline-block;
+  background: transparent;
 }
 
 .tfw-view-cropped-image.wide {
@@ -12,7 +13,6 @@
   display: block;
   margin: 0;
   border: none;
-  background: transparent;
 }
 
 .tfw-view-cropped-image > .visual {
@@ -24,11 +24,14 @@
   border-radius: 8px;
   cursor: pointer;
   overflow: hidden;
+  background-repeat:   repeat;
+  background-image:    url(tfw.view.cropped-image/back.jpg);
 }
 
 .tfw-view-cropped-image > .visual > canvas,
 .tfw-view-cropped-image > .visual > img {
   margin: 0;
+  background: transparent;
 }
 
 
