--- a/ker/mod/wdg.floating-button.css
+++ b/ker/mod/wdg.floating-button.css
@@ -30,7 +30,7 @@
   align-self: center;
 }
 
-@media (max-width: 460px) and (max-height: 460px) {
+@media (max-width: 460px) {
   .wdg-floating-button {
     width: 40px;
     height: 40px;
