--- a/ker/mod/wdg.modal.css
+++ b/ker/mod/wdg.modal.css
@@ -1,4 +1,5 @@
 div.wdg-modal {
+  max-width: 100vw;
   margin: 0;
   padding: 0;
   display: block;
@@ -20,7 +21,8 @@ div.wdg-modal .cell {
   justify-content: space-between;
 }
 
-div.wdg-modal .cell > header.hide {
+div.wdg-modal .cell > header.hide,
+div.wdg-modal .cell > footer.hide {
   display: none;
 }
 
