Prepare for next version of Boilerplate.

--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -4,6 +4,7 @@ div.tfw-view-textbox {
   border: none;
   border-bottom: 1px solid rgba(0,0,0,.5);
   font: inherit;
+  padding: 0 4px 4px 4px;
 }
 
 div.tfw-view-textbox.wide {
