wide is better for textbox. Gravatar bug fix for margins.

--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -9,6 +9,7 @@ div.tfw-view-textbox {
 
 div.tfw-view-textbox.wide {
   display: block;
+  width: 100%;
 }
 
 div.tfw-view-textbox.hide { display: none; }
