--- a/ker/mod/tfw.view.expand.css
+++ b/ker/mod/tfw.view.expand.css
@@ -1,23 +1,31 @@
 .tfw-view-expand {
-    display: flex;
-    height: 48px;
+    display: block;
     padding: 0 16px;
 }
 
-.tfw-view-expand > div.header {
+.tfw-view-expand > div.head {
     display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
     height: 32px;
+    font-family: Roboto, josefin-sans, sans-serif;
+    font-size: 14px;
+    font-weight: bold;
+    font-variant: small-caps;
+    font-variant: common-ligatures small-caps;
+    cursor: pointer;
 }
 
-.tfw-view-expand > div.header > div.icons {
+.tfw-view-expand > div.head > div.icons {
     position: relative;
     width: 24px;
     height: 24px;
     padding: 0;
-    margin: 0 8px;
+    margin: 0 8px 0 0;
 }
-    
-.tfw-view-expand > div.header > div.icons > div {
+
+.tfw-view-expand > div.head > div.icons > * {
     position: absolute;
     left: 0;
     top: 0;
@@ -25,23 +33,23 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    transition: all .2s;
+    transition: all .3s;
 }
 
-.tfw-view-expand > div.header > div.icons > div:first-child {
+.tfw-view-expand > div.head > div.icons > *:first-child {
     transform: rotate(0);
     opacity: 1;
 }
-.tfw-view-expand > div.header > div.icons > div:last-child {
-    transform: rotate(90deg);
+.tfw-view-expand > div.head > div.icons > *:last-child {
+    transform: rotate(-90deg);
     opacity: 0;
 }
 
-.tfw-view-expand.expand > div.header > div.icons > div:first-child {
+.tfw-view-expand.expand > div.head > div.icons > *:first-child {
     transform: rotate(90deg);
     opacity: 0;
 }
-.tfw-view-expand.expand > div.header > div.icons > div:last-child {
+.tfw-view-expand.expand > div.head > div.icons > *:last-child {
     transform: rotate(0);
     opacity: 1;
 }
@@ -49,10 +57,19 @@
 
 .tfw-view-expand > div.body {
     display: none;
-    padding: 8px 8px 8px 32px;
+    padding: 8px 0 8px 32px;
     margin: 0;
 }
 
 .tfw-view-expand.expand > div.body {
-    display: block;    
+    display: block;
+}
+
+.tfw-view-expand > div.body > div {
+    opacity: 0;
+}
+
+.tfw-view-expand.expand > div.body > div {
+    transition: all 2s;
+    opacity: 1;
 }
