--- a/ker/mod/wdg.box-button.css
+++ b/ker/mod/wdg.box-button.css
@@ -1,9 +1,13 @@
 div.wdg-box-button {
-    display: inline-block;
+    display: inline-flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 48px;
     vertical-align: middle;
-    padding: .5rem;
+    margin: 0;
+    padding: 0 1rem;
     cursor: auto;
-    transition: all .2s;
 }
 
 div.wdg-box-button.pointer {
@@ -11,5 +15,5 @@ div.wdg-box-button.pointer {
 }
 
 div.wdg-box-button.wide {
-    display: block;
+    display: flex;
 }
