--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -1,4 +1,4 @@
-div.tfw-view-textbox {
+ssdiv.tfw-view-textbox {
   position: relative;
   display: inline-block;
   border: none;
@@ -26,14 +26,19 @@ div.tfw-view-textbox > div {
 div.tfw-view-textbox input {
   border: 0;
   margin: 0;
-  background: transparent;
+  background-color: transparent !important;
   font: inherit;
-  color: rgba(0,0,0,.9);
   width: 100%;
+  padding: 0 8px;
+  line-height: 24px;
+  height: 24px;
+  -webkit-text-fill-color: inherit !important;
+  -webkit-box-shadow: none !important;
 }
 
 div.tfw-view-textbox.invalid > div > input {
-    color: #f00;
+  color: #f00;
+  background-color: #fee;
 }
     
 div.tfw-view-textbox.focus input {
@@ -55,6 +60,12 @@ div.tfw-view-textbox > div.head,
 div.tfw-view-textbox > div.foot {
   opacity: .5;
   font-size: .8em;
+}
+
+div.tfw-view-textbox > div.head {
+  padding: 0 8px;
+  line-height: 16px;
+  height: 16px;
 }
 
 
