--- a/ker/mod/tfw.view.combo.css
+++ b/ker/mod/tfw.view.combo.css
@@ -4,6 +4,11 @@ div.tfw-view-combo {
     justify-content: start;
     align-items: stretch;
 }
+div.tfw-view-combo.wide {
+    display: inline-flex;
+    width: 100%;
+}
+
 div.tfw-view-combo > header {
     flex: 1 1;
     position: static;
@@ -38,10 +43,11 @@ div.tfw-view-combo > .button.hide > div.list {
 }
 div.tfw-view-combo > .button.show {
     overflow: show;
-    z-index: 999999;
+    z-index: 999998;
 }
 div.tfw-view-combo > .button.show > div.list {
     position: fixed;
+    z-index: 999999;
 }
 div.tfw-view-combo > .button.show > div.screen {
     position: fixed; left: 0; top: 0; width: 100%; height: 100%; background: transparent; cursor: forbiden;
