--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -78,6 +78,7 @@ button.tfw-view-button.wide {
   text-shadow: none;
   box-shadow: none;
   opacity: .5;
+  text-decoration: line-through;
 }
 
 .tfw-view-button:focus {
