--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -19,6 +19,10 @@
   font-weight: bold;
 }
 
+.tfw-view-button.pressed {
+    outline: 1px solid rgba(0,0,0,.4);
+}
+
 button.tfw-view-button.wide {
   width: calc(100% - 16px);
   display: flex;
@@ -115,4 +119,3 @@ button.tfw-view-button.wide {
 .tfw-view-button.smal > .icon {
   margin: 0 4px 0 2px;
 }
-
