--- a/ker/mod/tfw.view.textarea.css
+++ b/ker/mod/tfw.view.textarea.css
@@ -1,8 +1,7 @@
 div.tfw-view-textarea {
     position: relative;
     display: inline-block;
-    border: none;
-    border-bottom: 1px solid rgba(0,0,0,.5);
+    border: 1px solid #0007;
     font-family: monospace;
 }
 
