--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -21,10 +21,15 @@
     --thm-fg-SD: #000;
 }
 
-*, .dom, .dom * {
+html {
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
+}
+*, *:before, *:after {
+    -webkit-box-sizing: inherit;
+    -moz-box-sizing: inherit;
+    box-sizing: inherit;
 }
 
 a, b, i, em, code, span {
