--- a/ker/mod/tfw.view.textbox.css
+++ b/ker/mod/tfw.view.textbox.css
@@ -7,6 +7,12 @@ div.tfw-view-textbox {
   padding: 0;
 }
 
+div.tfw-view-textbox.invalid {
+    border: 2px solid red;
+    border: 1px solid var(--thm-color-SD);
+    outline: 1px solid var(--thm-color-SD);
+}
+
 div.tfw-view-textbox.disabled {
     border: none;
     box-shadow: none;
