--- a/ker/mod/tfw.view.button.css
+++ b/ker/mod/tfw.view.button.css
@@ -73,8 +73,8 @@ button.tfw-view-button.wide {
   padding: 0;
 }
 
-.tfw-view-button[disabled]:hover,
-.tfw-view-button[disabled] {
+button.view.tfw-view-button[disabled]:hover,
+button.view.tfw-view-button[disabled] {
   pointer-event: none;
   text-decoration: none;
   cursor: default;
@@ -82,7 +82,7 @@ button.tfw-view-button.wide {
   text-shadow: none;
   box-shadow: none;
   opacity: .5;
-  text-decoration: line-through;
+  /*text-decoration: line-through;*/
 }
 
 .tfw-view-button:focus {
