--- a/ker/mod/dom.css
+++ b/ker/mod/dom.css
@@ -558,6 +558,7 @@ svg .fill1 { fill: #fff }
 .flex-grow7 { flex-grow: 7 }
 .flex-grow8 { flex-grow: 8 }
 .flex-grow9 { flex-grow: 9 }
+.flex-grow10 { flex-grow: 10 }
 .flex-shrink0 { flex-shrink: 0 }
 .flex-shrink1 { flex-shrink: 1 }
 .flex-shrink2 { flex-shrink: 2 }
@@ -568,3 +569,4 @@ svg .fill1 { fill: #fff }
 .flex-shrink7 { flex-shrink: 7 }
 .flex-shrink8 { flex-shrink: 8 }
 .flex-shrink9 { flex-shrink: 9 }
+.flex-shrink10 { flex-shrink: 10 }
